--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
+    "joi": "^17.13.3",
     "mongoose": "^8.6.1"
   }
 }
