--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
   "homepage": "https://github.com/Ebrahimsamad/menha-backend#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
+    "imagekit": "^5.2.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "path": "^0.12.7",
+    "sharp": "^0.33.5",
+    "winston": "^3.14.2"
   }
 }
