--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "API Menha ",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "start:dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -31,5 +33,8 @@
     "path": "^0.12.7",
     "sharp": "^0.33.5",
     "winston": "^3.14.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
